--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-/**
-* Template Name: Personal
-* Updated: Mar 10 2023 with Bootstrap v5.2.3
-* Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #040404;
@@ -1198,7 +1187,12 @@ section .container {
   color: #fff;
 }
 
-/* .presentation {
-  background-color: #d41610;
+.resume-btn {
+  background-color: #18d26e;
   color: #fff;
-} */
+}
+
+.resume-btn:hover {
+  background-color: #05a851;
+  color: #fff;
+}
